Solo queda hacer la parrilla Televisiva

--- a/app/src/main/res/layout/activity_mi_bd.xml
+++ b/app/src/main/res/layout/activity_mi_bd.xml
@@ -40,7 +40,7 @@
         android:id="@+id/buttonCSV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="POR CSV"
+        android:text="@string/CSV"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.078"
@@ -52,7 +52,7 @@
         android:id="@+id/buttonJSON"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="POR JSON"
+        android:text="@string/Json"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -64,7 +64,7 @@
         android:id="@+id/buttonXML"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="POR XML"
+        android:text="@string/XML"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.921"
@@ -76,7 +76,7 @@
         android:id="@+id/buttonModificar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Modificar"
+        android:text="@string/ModificarBD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.078"
@@ -88,7 +88,7 @@
         android:id="@+id/buttonBorrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Borrar"
+        android:text="@string/BorrarBD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,7 +99,7 @@
         android:id="@+id/buttonInsertar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Insertar"
+        android:text="@string/InsertarBD"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.921"
@@ -127,7 +127,7 @@
         android:layout_width="183dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Titulo"
+        android:hint="@string/TituloBD"
         android:inputType="textPersonName"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -142,7 +142,7 @@
         android:layout_width="110dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Año Estreno"
+        android:hint="@string/AnioEstrenoBD"
         android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -157,7 +157,7 @@
         android:layout_width="183dp"
         android:layout_height="49dp"
         android:ems="10"
-        android:hint="Cadena"
+        android:hint="@string/CadenaBD"
         android:inputType="textPersonName"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -172,7 +172,7 @@
         android:layout_width="230dp"
         android:layout_height="51dp"
         android:ems="10"
-        android:hint="Número de Temporadas"
+        android:hint="@string/TemporadasBD"
         android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
