--- a/app/src/main/res/layout/activity_mi_tv.xml
+++ b/app/src/main/res/layout/activity_mi_tv.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:backgroundTint="@color/black"
     tools:context=".MiTV">
 
     <ListView
@@ -12,6 +14,8 @@
         android:layout_height="574dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
