--- a/app/src/main/res/layout/adaptador.xml
+++ b/app/src/main/res/layout/adaptador.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="4dp"
         android:text="TextView"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +23,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="48dp"
         android:text="TextView"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,7 +34,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="140dp"
         android:text="TextView"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -45,7 +45,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="220dp"
         android:text="TextView"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -56,7 +56,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="328dp"
         android:text="TextView"
-        android:textColor="@color/purple_700"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
