--- a/app/src/main/res/layout/activity_series_fav.xml
+++ b/app/src/main/res/layout/activity_series_fav.xml
@@ -8,6 +8,22 @@
     android:backgroundTint="@color/black"
     tools:context=".SeriesFav">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buttonVolver2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
+        android:clickable="true"
+        app:backgroundTint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
+        app:rippleColor="@color/purple_200"
+        app:srcCompat="@android:drawable/ic_menu_revert" />
+
     <ListView
         android:id="@+id/listViewTV"
         android:layout_width="353dp"
